--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "react": "^16.4.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
-    "react-router-dom": "^4.2.2",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -99,7 +98,9 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "compass-mixins": "^0.12.10",
     "node-sass": "^4.9.0",
+    "react-router-dom": "^4.3.1",
     "sass-loader": "^7.0.2"
   },
   "output": [
